# elite-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
elite/: .gitignore  README.md  app.py  config.py  elite_orchestrator.py  main.py  requirements.txt
elite/agents/: action_agent.py  coder_agent.py  file_agent.py  screen_agent.py  system_agent.py  web_search_agent.py
elite/alerts/: telegram_bot.py
elite/core/: __init__.py  orchestrator.py
elite/templates/: index.html
src/elite/: __init__.py  __main__.py
src/elite/agents/: __init__.py  action.py  base.py  coder.py  filesystem.py  screen.py  search.py  system.py
src/elite/api/: __init__.py  app.py  middleware.py  routes.py
src/elite/cli/: __init__.py  repl.py
src/elite/config/: __init__.py  settings.py
src/elite/core/: __init__.py  exceptions.py  llm.py  registry.py  router.py
src/elite/integrations/: __init__.py  telegram.py
src/elite/orchestrator/: __init__.py  engine.py
src/elite/utils/: __init__.py  logging.py
static/: .gitkeep
templates/: index.html
tests/: conftest.py  test_agents.py  test_router.py
